site/src/scss/_component-examples.scss
@use "../../../scss/layout/breakpoints" as *;
@use "../../../scss/mixins/border-radius" as *;

//
// Docs examples
//

@layer custom {
  .bd-code-snippet {
    --bd-example-padding: 1.25rem;
    --bd-example-border-color: var(--bs-border-subtle);
    --bd-example-radius: var(--radius-5);
    --bd-example-inner-radius: calc(var(--bd-example-radius) - 1px);

    margin: 0;
    background-color: var(--bd-pre-bg);
    border: 1px solid var(--bd-example-border-color);
    @include border-radius(var(--bd-example-radius));

    .bd-example {
      &:first-child {
        @include border-top-radius(var(--bd-example-inner-radius));
      }
      &:last-child {
        @include border-bottom-radius(var(--bd-example-inner-radius));
      }
    }
  }

  li > .bd-code-snippet {
    margin-block: 1.25rem;
  }
  li:last-child > .bd-code-snippet:last-child {
    margin-bottom: 0;
  }

  .highlight-toolbar {
    padding-block: .5rem;
    padding-inline-start: var(--bd-example-padding);
    padding-inline-end: calc(var(--bd-example-padding) - .5em);
    background-color: var(--bs-bg-1);
    border-bottom: 1px solid var(--bd-example-border-color);

    &:first-child {
      @include border-top-radius(var(--bd-example-inner-radius));
    }

    &:not(:first-child) {
      border-top: 1px solid var(--bd-example-border-color);
    }
  }

  .bd-example {
    position: relative;
    display: flow-root;
    padding: var(--bd-example-padding);
    font-size: var(--font-size-base);
    line-height: var(--body-line-height);
    background-color: var(--bs-bg-body);

    @include media-breakpoint-up(md) {
      --bd-example-padding: 1.5rem;
    }

    + p {
      margin-top: 2rem;
    }

    > .tab-content {
      min-height: 120px;
      padding: var(--bs-spacer);
      background-color: var(--bs-bg-1);
      @include border-radius(var(--bd-example-radius));
    }

    > .menu.position-static {
      max-width: fit-content;
    }

    // > :last-child,
    > nav:last-child .breadcrumb {
      margin-bottom: 0;
    }

    > hr:last-child {
      margin-bottom: var(--spacer);
    }

    // Images
    > svg + svg,
    > img + img {
      margin-inline-start: .5rem;
    }

    // List groups
    > .list-group {
      max-width: 400px;
    }

    > [class*="list-group-horizontal"] {
      max-width: 100%;
    }

    // Navbars
    .fixed-top,
    .sticky-top {
      position: static !important; // stylelint-disable-line
      margin: calc(-1 * var(--bd-example-padding)) calc(-1 * var(--bd-example-padding)) var(--bd-example-padding);
    }

    .fixed-bottom,
    .sticky-bottom {
      position: static !important; // stylelint-disable-line
      margin: var(--bd-example-padding) calc(-1 * var(--bd-example-padding)) calc(-1 * var(--bd-example-padding));

    }

    // Pagination
    .pagination {
      margin-bottom: 0;
    }
  }

  //
  // Grid examples
  //

  .bd-example-row [class^="col"],
  .bd-example-cols [class^="col"] > *,
  .bd-example-cssgrid [class*="grid"] > * {
    padding-block: .75rem;
    background-color: color-mix(in srgb, var(--bd-violet) 15%, transparent);
    border: 1px solid color-mix(in srgb, var(--bd-violet) 30%, transparent);
  }

  .bd-example-row .row + .row,
  .bd-example-cssgrid .grid + .grid {
    margin-top: 1rem;
  }

  .bd-example-row-flex-cols .row {
    min-height: 10rem;
    background-color: color-mix(in srgb, var(--bd-violet) 15%, transparent);
  }

  .bd-example-flex div:not(.vr) {
    background-color: color-mix(in srgb, var(--bd-violet) 15%, transparent);
    border: 1px solid color-mix(in srgb, var(--bd-violet) 30%, transparent);
  }

  .bd-example-buttons {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: .5rem;
    justify-content: start;

    @include media-breakpoint-down(lg) {
      grid-template-columns: repeat(2, 1fr);
    }
  }

  // // Grid mixins
  // .example-container {
  //   width: 800px;
  //   @include make-container();
  // }

  // .example-row {
  //   @include make-row();
  // }

  // .example-content-main {
  //   @include make-col-ready();

  //   @include media-breakpoint-up(sm) {
  //     @include make-col(6);
  //   }

  //   @include media-breakpoint-up(lg) {
  //     @include make-col(8);
  //   }
  // }

  // .example-content-secondary {
  //   @include make-col-ready();

  //   @include media-breakpoint-up(sm) {
  //     @include make-col(6);
  //   }

  //   @include media-breakpoint-up(lg) {
  //     @include make-col(4);
  //   }
  // }

  // Ratio helpers
  .bd-example-ratios {
    [class*="ratio"] {
      display: flex;
      align-items: center;
      justify-content: center;
      margin-bottom: 1rem;
      color: var(--bs-fg-3);
      background-color: var(--bs-bg-1);
      border: var(--bs-border-width) solid var(--bs-border-color);
      @include border-radius(var(--bd-example-radius));
    }
  }

  .bd-example-drawer {
    .drawer {
      position: static;
      display: flex;
      height: 400px;
      margin: var(--drawer-inset);
      visibility: visible;
      transform: translate(0);
    }
  }

  // Tooltips
  .tooltip-demo {
    a {
      white-space: nowrap;
    }
  }

  // scss-docs-start custom-tooltip
  .custom-tooltip {
    --bs-tooltip-bg: var(--bd-violet-bg);
    --bs-tooltip-color: var(--bs-white);
  }
  // scss-docs-end custom-tooltip

  // scss-docs-start custom-popovers
  .custom-popover {
    --bs-popover-max-width: 200px;
    --bs-popover-border-color: var(--bd-violet-bg);
    --bs-popover-header-bg: var(--bd-violet-bg);
    --bs-popover-header-color: var(--bs-white);
    --bs-popover-body-padding-x: 1rem;
    --bs-popover-body-padding-y: .5rem;
  }
  // scss-docs-end custom-popovers

  // Scrollspy demo on fixed height div
  .scrollspy-example {
    height: 200px;
    margin-top: .5rem;
    overflow: auto;
  }

  .scrollspy-example-2 {
    height: 350px;
    overflow: auto;
  }

  .simple-list-example-scrollspy {
    .active {
      background-color: color-mix(in srgb, var(--bd-violet) 15%, transparent);
    }
  }

  .bd-example-border-utils {
    [class^="border"] {
      display: inline-block;
      width: 5rem;
      height: 5rem;
      margin: .25rem;
      background-color: var(--bs-bg-2);
    }
  }

  .bd-example-border-color-utils {
    [class^="border"] {
      padding: .5rem .75rem;
    }
  }

  .bd-example-rounded-utils {
    [class*="rounded"] {
      margin: .25rem;
    }
  }

  .bd-example-position-utils {
    position: relative;
    padding: 2rem;

    .position-relative {
      height: 200px;
      background-color: var(--bs-bg-2);
    }

    .position-absolute {
      width: 2rem;
      height: 2rem;
      background-color: var(--bs-fg-2);
      @include border-radius();
    }
  }

  .bd-example-position-examples {
    &::after {
      content: none;
    }
  }

  // Placeholders
  .bd-example-placeholder-cards {
    &::after {
      display: none;
    }

    .card {
      width: 18rem;
    }
  }

  // Toasts
  .bd-example-toasts {
    min-height: 300px;
  }

  .bd-example-zindex-levels {
    min-height: 15rem;

    > div {
      color: var(--bs-bg-body);
      background-color: var(--bd-violet);
      border: 1px solid var(--bd-purple);

      > span {
        position: absolute;
        right: 5px;
        bottom: 0;
      }
    }

    > :nth-child(2) {
      top: 3rem;
      left: 3rem;
    }
    > :nth-child(3) {
      top: 4.5rem;
      left: 4.5rem;
    }
    > :nth-child(4) {
      top: 6rem;
      left: 6rem;
    }
    > :nth-child(5) {
      top: 7.5rem;
      left: 7.5rem;
    }
  }

  //
  // Resizable examples
  //

  .bd-example-resizable {
    position: relative;
    padding: .375rem;
    overflow: hidden;
  }

  .bd-resizable-container {
    max-width: 100%;
    padding: 1rem;
    overflow: hidden;
    resize: horizontal;
    background-color: var(--bs-bg-body);
    @include border-radius(var(--radius-4));
  }

  //
  // Code snippets
  //

  .bd-colors-grid {
    grid-template-columns: repeat(7, 1fr);
    gap: 4px;
    min-width: 0;

    @include media-breakpoint-up(xl) {
      grid-template-columns: repeat(13, 1fr);
    }
  }

  .bd-theme-colors-grid {
    grid-template-columns: repeat(5, 1fr);
    gap: 8px;
    min-width: 0;

    @include media-breakpoint-up(xl) {
      grid-template-columns: repeat(9, 1fr);
    }
  }
}

